8/8_jenkins_legacy/helm/vault-security-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    meta.helm.sh/release-name: vault
    meta.helm.sh/release-namespace: vault
  labels:
    app.kubernetes.io/component: vault
    app.kubernetes.io/instance: vault
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    app.kubernetes.io/version: 3.5.16
    helm.sh/chart: vault-10.3.1
  name: vault
  namespace: vault
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 8200
      protocol: TCP
    - port: 8201
      protocol: TCP
    - port: 8201
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/name: vault
  policyTypes:
  - Ingress
  - Egress
